fix image path in recipe_lock.ejs

--- a/views/recipe_lock.ejs
+++ b/views/recipe_lock.ejs
@@ -2,7 +2,7 @@
     <br>
     <h2 class="text-center pr-3 pl-3"><b><%= recipe.name %></b></h2>
     <div class="d-flex justify-content-center">
-        <img src="<%= recipe.image %>" height="10%">
+        <img src="../<%= recipe.image %>" height="10%">
     </div>
     <h4 class="text-center pr-3 pl-3">$<%= recipe.price %></h4>
     <br>
