fix image going out of boundary in myrecipes and recipebook

--- a/views/recipe_book.ejs
+++ b/views/recipe_book.ejs
@@ -13,7 +13,7 @@
         <div class="col col-lg-8 mt-1 mb-1">
             <div class="card">
                 <div class="card-body">
-                    <img src="<%= recipe.image %>" height="10%">
+                    <img src="<%= recipe.image %>" class="img-thumbnail">
                     <h5 class="card-title text-center d-inline m-4"><a href="/recipe/<%= recipe.id %>"><%= recipe.name %></a></h5>
                 </div>
                 <div class="card-body d-flex justify-content-end">
