--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     <a class="col-sm-4" href="/recipe/<%= recipe.id %>">
     <div class="card">
       <div class="card-body">
-        <img class="card-img" src="<%= recipe.image %>">
+        <img class="card-img" src="<%= recipe.image %>" class="img-thumbnail" height="300px">
         <h5 class="card-title text-center"><%= recipe.name %></h5>
       </div>
     </div>
