set static cookcircle.azurewebsites.net url for facebook share

--- a/views/recipe_book.ejs
+++ b/views/recipe_book.ejs
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-body d-flex justify-content-end">
                     <div>
-                        <div class="fb-share-button" data-href="http://localhost:3000/recipe/<%= recipe._id %>" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A3000%2Frecipe%2F<%= recipe._id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+                        <div class="fb-share-button" data-href="https://cookcircle.azurewebsites.net/recipe/<%= recipe._id %>" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcookcircle.azurewebsites.net%2Frecipe%2F<%= recipe._id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
                     </div>
                </div>
               </div>
