--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
             let ogUrl = "/";
             if (typeof og == 'object' && og) {
                 ogImage = og.image;
+                ogDescription = og.description;
             }
         %>
         <meta property="og:url" content="<%= ogUrl %>" />
